[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/Deck.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Hand.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Arena.tscn" type="PackedScene" id=4]

[node name="Player" type="Node"]
script = ExtResource( 1 )

[node name="PlayerDeck" parent="." instance=ExtResource( 2 )]
position = Vector2( 29.6648, 1568 )

[node name="PlayerHand" parent="." instance=ExtResource( 3 )]
position = Vector2( 260.071, 1463.66 )
is_for_player = true

[node name="PlayerArena" parent="." instance=ExtResource( 4 )]
position = Vector2( 678.055, 889.948 )
is_for_player = true

[connection signal="card_played" from="PlayerArena" to="." method="_on_PlayerArena_card_played"]
